--- a/index.html
+++ b/index.html
@@ -10,206 +10,227 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Test</title>
   </head>
   <body>
     <header class="header">
-      <!-- логотип -->
-      <a href="./index.html" class="logo link"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
+      <div class="header-container container">
+        <!-- логотип -->
+        <a href="./index.html" class="header-logo logo link"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
 
-      <!-- навигация -->
+        <!-- навигация -->
 
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html"
-              ><span class="current-page">Студия</span>
-            </a>
+        <nav class="header-nav">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html"
+                ><span class="current-page">Студия</span>
+              </a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- список контактов -->
+
+        <ul class="header-contacts-list contacts-list list">
+          <li class="header-contacts-item">
+            <a
+              class="header-contacts-link link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Контакты</a>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
-      </nav>
-
-      <!-- список контактов -->
-
-      <ul class="header-contacts-list contacts-list list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!-- герой -->
 
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn btn" type="button">Заказать услугу</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn btn" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Преимущества -->
 
       <section class="advantage">
-        <h2 hidden class="advantage-title-hidden">Преимущества</h2>
-        <ul class="advantage-list list">
-          <li class="advantage-item">
-            <h3 class="advantage-subtitle">Внимание к деталям</h3>
-            <p class="advantage-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-subtitle">Пунктуальность</h3>
-            <p class="advantage-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-subtitle">Планирование</h3>
-            <p class="advantage-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-subtitle">Современные технологии</h3>
-            <p class="advantage-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="advantage-list list">
+            <li class="advantage-item">
+              <h3 class="advantage-subtitle">Внимание к деталям</h3>
+              <p class="advantage-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-subtitle">Пунктуальность</h3>
+              <p class="advantage-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-subtitle">Планирование</h3>
+              <p class="advantage-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantage-subtitle">Современные технологии</h3>
+              <p class="advantage-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
 
       <section class="work">
-        <h2 class="work-title title">Чем мы занимаемся</h2>
-        <ul class="work-list list">
-          <li class="work-item">
-            <img
-              src="./images/box-1.jpg"
-              alt="занимаемся программированием на разных устройствах"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="work-item">
-            <img
-              src="./images/box-2.jpg"
-              alt="занимаемся программированием на разных устройствах"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="work-item">
-            <img
-              src="./images/box-3.jpg"
-              alt="занимаемся программированием на разных устройствах"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title title">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/box-1.jpg"
+                alt="занимаемся программированием на разных устройствах"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/box-2.jpg"
+                alt="занимаемся программированием на разных устройствах"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/box-3.jpg"
+                alt="занимаемся программированием на разных устройствах"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
 
       <section class="command">
-        <h2 class="command-title title">Наша команда</h2>
-        <ul class="command-list list">
-          <li class="command-item">
-            <img
-              src="./images/team-card-1.jpg"
-              alt="мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="command-subtitle">Игорь Демьяненко</h3>
-            <p class="command-text">Product Designer</p>
-          </li>
-          <li class="command-item">
-            <img
-              src="./images/team-card-2.jpg"
-              alt="женщина"
-              width="270"
-              height="260"
-            />
-            <h3 class="command-subtitle">Ольга Репина</h3>
-            <p class="command-text">Frontend Developer</p>
-          </li>
-          <li class="command-item">
-            <img
-              src="./images/team-card-3.jpg"
-              alt="мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="command-subtitle">Николай Тарасов</h3>
-            <p class="command-text">Marketing</p>
-          </li>
-          <li class="command-item">
-            <img
-              src="./images/team-card-4.jpg"
-              alt="мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="command-subtitle">Михаил Ермаков</h3>
-            <p class="command-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="command-title title">Наша команда</h2>
+          <ul class="command-list list">
+            <li class="command-item">
+              <img
+                src="./images/team-card-1.jpg"
+                alt="мужчина"
+                width="270"
+                height="260"
+              />
+              <h3 class="command-subtitle">Игорь Демьяненко</h3>
+              <p class="command-text">Product Designer</p>
+            </li>
+            <li class="command-item">
+              <img
+                src="./images/team-card-2.jpg"
+                alt="женщина"
+                width="270"
+                height="260"
+              />
+              <h3 class="command-subtitle">Ольга Репина</h3>
+              <p class="command-text">Frontend Developer</p>
+            </li>
+            <li class="command-item">
+              <img
+                src="./images/team-card-3.jpg"
+                alt="мужчина"
+                width="270"
+                height="260"
+              />
+              <h3 class="command-subtitle">Николай Тарасов</h3>
+              <p class="command-text">Marketing</p>
+            </li>
+            <li class="command-item">
+              <img
+                src="./images/team-card-4.jpg"
+                alt="мужчина"
+                width="270"
+                height="260"
+              />
+              <h3 class="command-subtitle">Михаил Ермаков</h3>
+              <p class="command-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <!-- логотип -->
+      <div class="container">
+        <!-- логотип -->
 
-      <a href="./index.html" class="logo link"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
+        <a href="./index.html" class="footer-logo logo link"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
 
-      <!-- адрес -->
-      <address class="address">
-        <ul class="addres-list list">
-          <li class="addres-item">
-            <a class="adress-link link" href=""
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="adress-contacts-link contacts-link link"
-              href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="addres-item">
-            <a
-              class="adress-contacts-link contacts-link link"
-              href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <!-- адрес -->
+        <address class="address">
+          <ul class="addres-list list">
+            <li class="addres-item">
+              <a class="adress-link link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="addres-item">
+              <a
+                class="adress-contacts-link contacts-link link"
+                href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="addres-item">
+              <a
+                class="adress-contacts-link contacts-link link"
+                href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
