--- a/portfolio.html
+++ b/portfolio.html
@@ -10,214 +10,251 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Test</title>
   </head>
   <body>
     <header class="header">
-      <!-- логотип -->
-      <a href="./index.html" class="logo link"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
+      <div class="header-container container">
+        <!-- логотип -->
+        <a href="./index.html" class="header-logo logo link"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
 
-      <!-- навигация -->
+        <!-- навигация -->
 
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html"
-              ><span class="current-page">Портфолио</span></a
+        <nav class="header-nav">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Студия </a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html"
+                ><span class="current-page">Портфолио</span></a
+              >
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- список контактов -->
+
+        <ul class="header-contacts-list contacts-list list">
+          <li class="header-contacts-item">
+            <a
+              class="header-contacts-link link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Контакты</a>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
-      </nav>
-
-      <!-- список контактов -->
-
-      <ul class="header-contacts-list contacts-list list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="portfolio">
-        <h1 class="portfolio-title-hidden">Портфолио</h1>
-        <ul class="portfolio-filter list">
-          <li class="filter-item">
-            <button class="portfolio-btn btn" type="button">Все</button>
-          </li>
-          <li class="filter-item">
-            <button class="portfolio-btn btn" type="button">Веб-сайты</button>
-          </li>
-          <li class="filter-item">
-            <button class="portfolio-btn btn" type="button">Приложения</button>
-          </li>
-          <li class="filter-item">
-            <button class="portfolio-btn btn" type="button">Дизайн</button>
-          </li>
-          <li class="filter-item">
-            <button class="portfolio-btn btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-1.jpeg"
-                alt="Ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-2.jpeg"
-                alt="постер с баскетболистами"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-3.jpeg"
-                alt="логотип ресторана Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-4.jpeg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-text">Маркетинг</p></a
-            >
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-5.jpeg"
-                alt="коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-text">Приложение</p></a
-            >
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-6.jpeg"
-                alt="монитор компьютера"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p></a
-            >
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-7.jpeg"
-                alt="журнал"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p></a
-            >
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-8.jpeg"
-                alt="этикетка"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href=""
-              ><img
-                src="./images/portfolio-9.jpeg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text">Приложение</p></a
-            >
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="portfolio">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="portfolio-filter list">
+            <li class="filter-item">
+              <button class="portfolio-btn btn" type="button">Все</button>
+            </li>
+            <li class="filter-item">
+              <button class="portfolio-btn btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-item">
+              <button class="portfolio-btn btn" type="button">
+                Приложения
+              </button>
+            </li>
+            <li class="filter-item">
+              <button class="portfolio-btn btn" type="button">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button class="portfolio-btn btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-1.jpeg"
+                  alt="Ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-2.jpeg"
+                  alt="постер с баскетболистами"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-3.jpeg"
+                  alt="логотип ресторана Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-4.jpeg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-5.jpeg"
+                  alt="коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-6.jpeg"
+                  alt="монитор компьютера"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-7.jpeg"
+                  alt="журнал"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-8.jpeg"
+                  alt="этикетка"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="link" href=""
+                ><img
+                  src="./images/portfolio-9.jpeg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-description">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
-      <!-- логотип -->
+      <div class="container">
+        <!-- логотип -->
 
-      <a href="./index.html" class="logo link"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
+        <a href="./index.html" class="footer-logo logo link"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
 
-      <!-- адрес -->
-      <address class="address">
-        <ul class="addres-list list">
-          <li class="addres-item">
-            <a class="adress-link link" href=""
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="adress-contacts-link contacts-link link"
-              href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="addres-item">
-            <a
-              class="adress-contacts-link contacts-link link"
-              href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <!-- адрес -->
+        <address class="address">
+          <ul class="addres-list list">
+            <li class="addres-item">
+              <a class="adress-link link" href=""
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="addres-item">
+              <a
+                class="adress-contacts-link contacts-link link"
+                href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="addres-item">
+              <a
+                class="adress-contacts-link contacts-link link"
+                href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
