--- a/portfolio.html
+++ b/portfolio.html
@@ -66,8 +66,8 @@
     </header>
 
     <main>
-      <div class="container">
-        <section class="portfolio">
+      <section class="portfolio section">
+        <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-filter list">
             <li class="filter-item">
@@ -218,16 +218,17 @@
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
         <!-- логотип -->
 
         <a href="./index.html" class="footer-logo logo link"
-          ><span class="logo-accent">Web</span>Studio</a
+          ><span class="logo-accent">Web</span
+          ><span class="footer-logo-text">Studio</span></a
         >
 
         <!-- адрес -->
