--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <!-- Преимущества -->
 
-      <section class="advantage">
+      <section class="advantage section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantage-list list">
@@ -115,7 +115,7 @@
 
       <!-- Чем мы занимаемся -->
 
-      <section class="work">
+      <section class="work section">
         <div class="container">
           <h2 class="work-title title">Чем мы занимаемся</h2>
           <ul class="work-list list">
@@ -149,7 +149,7 @@
 
       <!-- Наша команда -->
 
-      <section class="command">
+      <section class="command section">
         <div class="container">
           <h2 class="command-title title">Наша команда</h2>
           <ul class="command-list list">
@@ -160,8 +160,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-subtitle">Игорь Демьяненко</h3>
-              <p class="command-text">Product Designer</p>
+              <div class="command-description">
+                <h3 class="command-subtitle">Игорь Демьяненко</h3>
+                <p class="command-text">Product Designer</p>
+              </div>
             </li>
             <li class="command-item">
               <img
@@ -170,8 +172,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-subtitle">Ольга Репина</h3>
-              <p class="command-text">Frontend Developer</p>
+              <div class="command-description">
+                <h3 class="command-subtitle">Ольга Репина</h3>
+                <p class="command-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="command-item">
               <img
@@ -180,8 +184,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-subtitle">Николай Тарасов</h3>
-              <p class="command-text">Marketing</p>
+              <div class="command-description">
+                <h3 class="command-subtitle">Николай Тарасов</h3>
+                <p class="command-text">Marketing</p>
+              </div>
             </li>
             <li class="command-item">
               <img
@@ -190,20 +196,23 @@
                 width="270"
                 height="260"
               />
-              <h3 class="command-subtitle">Михаил Ермаков</h3>
-              <p class="command-text">UI Designer</p>
+              <div class="command-description">
+                <h3 class="command-subtitle">Михаил Ермаков</h3>
+                <p class="command-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
         <!-- логотип -->
 
         <a href="./index.html" class="footer-logo logo link"
-          ><span class="logo-accent">Web</span>Studio</a
+          ><span class="logo-accent">Web</span
+          ><span class="footer-logo-text">Studio</span></a
         >
 
         <!-- адрес -->
